--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:100,300,400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style/style.css">
-    <title>Hour Calculator</title>
+    <title>Joe Moses</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             probably join. </p>
     </div>
     <div class="content-container">
-        <a href="https://lets-code.info">Welcome Home</a>
+        <a href="https://chrome.google.com/webstore/detail/welcome-home-custom-new-t/gmiimcmikbjjmgnionlagphpjcajlemo/reviews">Welcome Home</a>
         <p>The "new tab" page on Chrome is boring. Replace it with something that isn't boring... something like Welcome home, a free Chrome extension which tells you all sorts of cool stuff, like the news, weather, time, bookmarks, notes and todos (when you tell it to tell you them).</p>
     </div>
     <div class="content-container">
